deploy: 1f6c7ee6bf85b9d5b46f3685b66ba2d280788168

--- a/人类学习理论.html
+++ b/人类学习理论.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>日日新 - Mdbook Template</title>
+        <title>人类学习理论 - Mdbook Template</title>
 
 
         <!-- Custom HTML head -->
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><li class="part-title">诚意正心</li><li class="chapter-item expanded affix "><li class="part-title">Wisdom</li><li class="chapter-item expanded "><a href="日日新.html" class="active"><strong aria-hidden="true">1.</strong> 日日新</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Wisdom/穷查理宝典——查理芒格智慧箴言录.html"><strong aria-hidden="true">1.1.</strong> 穷查理宝典——查理芒格智慧箴言录</a></li><li class="chapter-item expanded "><a href="Wisdom/富兰克林自传.html"><strong aria-hidden="true">1.2.</strong> 富兰克林自传</a></li><li class="chapter-item expanded "><a href="Wisdom/黑客与画家.html"><strong aria-hidden="true">1.3.</strong> 黑客与画家</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Learning</li><li class="chapter-item expanded "><a href="人类学习理论.html"><strong aria-hidden="true">2.</strong> 人类学习理论</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Learning/朱子读书法.html"><strong aria-hidden="true">2.1.</strong> 朱子读书法</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Literacy</li><li class="chapter-item expanded "><a href="文化素养.html"><strong aria-hidden="true">3.</strong> 文化素养</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Literacy/东京梦华录.html"><strong aria-hidden="true">3.1.</strong> 东京梦华录</a></li><li class="chapter-item expanded "><a href="Literacy/生命是什么.html"><strong aria-hidden="true">3.2.</strong> 生命是什么？</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><li class="part-title">诚意正心</li><li class="chapter-item expanded affix "><li class="part-title">Wisdom</li><li class="chapter-item expanded "><a href="日日新.html"><strong aria-hidden="true">1.</strong> 日日新</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Wisdom/穷查理宝典——查理芒格智慧箴言录.html"><strong aria-hidden="true">1.1.</strong> 穷查理宝典——查理芒格智慧箴言录</a></li><li class="chapter-item expanded "><a href="Wisdom/富兰克林自传.html"><strong aria-hidden="true">1.2.</strong> 富兰克林自传</a></li><li class="chapter-item expanded "><a href="Wisdom/黑客与画家.html"><strong aria-hidden="true">1.3.</strong> 黑客与画家</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Learning</li><li class="chapter-item expanded "><a href="人类学习理论.html" class="active"><strong aria-hidden="true">2.</strong> 人类学习理论</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Learning/朱子读书法.html"><strong aria-hidden="true">2.1.</strong> 朱子读书法</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Literacy</li><li class="chapter-item expanded "><a href="文化素养.html"><strong aria-hidden="true">3.</strong> 文化素养</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Literacy/东京梦华录.html"><strong aria-hidden="true">3.1.</strong> 东京梦华录</a></li><li class="chapter-item expanded "><a href="Literacy/生命是什么.html"><strong aria-hidden="true">3.2.</strong> 生命是什么？</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -174,14 +174,17 @@
                 <div id="content" class="content">
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
-<h1 id="日日新"><a class="header" href="#日日新">日日新</a></h1>
+<h1 id="人类学习理论"><a class="header" href="#人类学习理论">人类学习理论</a></h1>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="Wisdom/黑客与画家.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
-                            <a rel="next prefetch" href="Wisdom/穷查理宝典——查理芒格智慧箴言录.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="Learning/朱子读书法.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -191,8 +194,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="Wisdom/黑客与画家.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
-                    <a rel="next prefetch" href="Wisdom/穷查理宝典——查理芒格智慧箴言录.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="Learning/朱子读书法.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
