--- a/Wisdom/穷查理宝典——查理芒格智慧箴言录.html
+++ b/Wisdom/穷查理宝典——查理芒格智慧箴言录.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>穷查理宝典——查理芒格智慧箴言录 - Mdbook Template</title>
+        <title>穷查理宝典——查理芒格智慧箴言录 - Liberal Arts</title>
 
 
         <!-- Custom HTML head -->
@@ -141,7 +141,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">Mdbook Template</h1>
+                    <h1 class="menu-title">Liberal Arts</h1>
 
                     <div class="right-buttons">
                         <a href="../print.html" title="Print this book" aria-label="Print this book">
