--- a/Wisdom/黑客与画家.html
+++ b/Wisdom/黑客与画家.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en" class="light" dir="ltr">
+<html lang="en" class="light sidebar-visible" dir="ltr">
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
@@ -7,7 +7,7 @@
 
 
         <!-- Custom HTML head -->
-        
+
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
@@ -24,26 +24,29 @@
         <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="../highlight.css">
-        <link rel="stylesheet" href="../tomorrow-night.css">
-        <link rel="stylesheet" href="../ayu-highlight.css">
+        <link rel="stylesheet" id="highlight-css" href="../highlight.css">
+        <link rel="stylesheet" id="tomorrow-night-css" href="../tomorrow-night.css">
+        <link rel="stylesheet" id="ayu-highlight-css" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
-    </head>
-    <body class="sidebar-visible no-js">
-    <div id="body-container">
-        <!-- Provide site root to javascript -->
-        <script>
-            var path_to_root = "../";
-            var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
-        </script>
 
+        <!-- Provide site root and default themes to javascript -->
+        <script>
+            const path_to_root = "../";
+            const default_light_theme = "light";
+            const default_dark_theme = "navy";
+        </script>
+        <!-- Start loading toc.js asap -->
+        <script src="../toc.js"></script>
+    </head>
+    <body>
+    <div id="body-container">
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
         <script>
             try {
-                var theme = localStorage.getItem('mdbook-theme');
-                var sidebar = localStorage.getItem('mdbook-sidebar');
+                let theme = localStorage.getItem('mdbook-theme');
+                let sidebar = localStorage.getItem('mdbook-sidebar');
 
                 if (theme.startsWith('"') && theme.endsWith('"')) {
                     localStorage.setItem('mdbook-theme', theme.slice(1, theme.length - 1));
@@ -57,24 +60,22 @@
 
         <!-- Set the theme before any content is loaded, prevents flash -->
         <script>
-            var theme;
+            const default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? default_dark_theme : default_light_theme;
+            let theme;
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
-            var html = document.querySelector('html');
+            const html = document.documentElement;
             html.classList.remove('light')
             html.classList.add(theme);
-            var body = document.querySelector('body');
-            body.classList.remove('no-js')
-            body.classList.add('js');
+            html.classList.add("js");
         </script>
 
         <input type="checkbox" id="sidebar-toggle-anchor" class="hidden">
 
         <!-- Hide / unhide sidebar before it is displayed -->
         <script>
-            var body = document.querySelector('body');
-            var sidebar = null;
-            var sidebar_toggle = document.getElementById("sidebar-toggle-anchor");
+            let sidebar = null;
+            const sidebar_toggle = document.getElementById("sidebar-toggle-anchor");
             if (document.body.clientWidth >= 1080) {
                 try { sidebar = localStorage.getItem('mdbook-sidebar'); } catch(e) { }
                 sidebar = sidebar || 'visible';
@@ -82,45 +83,25 @@
                 sidebar = 'hidden';
             }
             sidebar_toggle.checked = sidebar === 'visible';
-            body.classList.remove('sidebar-visible');
-            body.classList.add("sidebar-" + sidebar);
+            html.classList.remove('sidebar-visible');
+            html.classList.add("sidebar-" + sidebar);
         </script>
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
-            <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><li class="part-title">诚意正心</li><li class="chapter-item expanded affix "><li class="part-title">Wisdom</li><li class="chapter-item expanded "><a href="../日日新.html"><strong aria-hidden="true">1.</strong> 日日新</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Wisdom/穷查理宝典——查理芒格智慧箴言录.html"><strong aria-hidden="true">1.1.</strong> 穷查理宝典——查理芒格智慧箴言录</a></li><li class="chapter-item expanded "><a href="../Wisdom/富兰克林自传.html"><strong aria-hidden="true">1.2.</strong> 富兰克林自传</a></li><li class="chapter-item expanded "><a href="../Wisdom/黑客与画家.html" class="active"><strong aria-hidden="true">1.3.</strong> 黑客与画家</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Learning</li><li class="chapter-item expanded "><a href="../人类学习理论.html"><strong aria-hidden="true">2.</strong> 人类学习理论</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Learning/朱子读书法.html"><strong aria-hidden="true">2.1.</strong> 朱子读书法</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Literacy</li><li class="chapter-item expanded "><a href="../文化素养.html"><strong aria-hidden="true">3.</strong> 文化素养</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Literacy/东京梦华录.html"><strong aria-hidden="true">3.1.</strong> 东京梦华录</a></li><li class="chapter-item expanded "><a href="../Literacy/生命是什么.html"><strong aria-hidden="true">3.2.</strong> 生命是什么？</a></li></ol></li></ol>
-            </div>
+            <!-- populated by js -->
+            <mdbook-sidebar-scrollbox class="sidebar-scrollbox"></mdbook-sidebar-scrollbox>
+            <noscript>
+                <iframe class="sidebar-iframe-outer" src="../toc.html"></iframe>
+            </noscript>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
             </div>
         </nav>
 
-        <!-- Track and set sidebar scroll position -->
-        <script>
-            var sidebarScrollbox = document.querySelector('#sidebar .sidebar-scrollbox');
-            sidebarScrollbox.addEventListener('click', function(e) {
-                if (e.target.tagName === 'A') {
-                    sessionStorage.setItem('sidebar-scroll', sidebarScrollbox.scrollTop);
-                }
-            }, { passive: true });
-            var sidebarScrollTop = sessionStorage.getItem('sidebar-scroll');
-            sessionStorage.removeItem('sidebar-scroll');
-            if (sidebarScrollTop) {
-                // preserve sidebar scroll position when navigating via links within sidebar
-                sidebarScrollbox.scrollTop = sidebarScrollTop;
-            } else {
-                // scroll sidebar to current active section when navigating via "next/previous chapter" buttons
-                var activeSection = document.querySelector('#sidebar .active');
-                if (activeSection) {
-                    activeSection.scrollIntoView({ block: 'center' });
-                }
-            }
-        </script>
-
         <div id="page-wrapper" class="page-wrapper">
 
             <div class="page">
-                                <div id="menu-bar-hover-placeholder"></div>
+                <div id="menu-bar-hover-placeholder"></div>
                 <div id="menu-bar" class="menu-bar sticky">
                     <div class="left-buttons">
                         <label id="sidebar-toggle" class="icon-button" for="sidebar-toggle-anchor" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
@@ -130,6 +111,7 @@
                             <i class="fa fa-paint-brush"></i>
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
+                            <li role="none"><button role="menuitem" class="theme" id="default_theme">Auto</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="light">Light</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
@@ -173,7 +155,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
+                        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="黑客与画家"><a class="header" href="#黑客与画家">《黑客与画家》</a></h1>
 <ul>
 <li><a href="#%E6%A6%82%E8%BF%B0">概述</a></li>
@@ -591,16 +573,16 @@
 <p>^「《格斗俱乐部》（Fight Club）是1999年的美国电影，讲述了一个地下组织发起人的故亊。在电影中，加入“格斗俱乐部”的第一条规则就是不得谈论格斗俱乐部。——译者注」</p>
 <p>1638年，英国诗人弥尔顿（John Milton）准备第一次访问意大利。曾经担任英国驻威尼斯大使的沃顿爵士（Hemy Wootton）告诉弥尔顿要记住一句座右铭“i pensieri stretti &amp; il viso sciolto”。字面意思是“守口如瓶，笑脸相迎”，也就是说，你要对每一个人微笑，但是不要说出自己的真实想法。这是很明智的建议。因为弥尔顿是一个喜欢争论、好打嘴仗的人，而当时罗马教廷的宗教裁判所非常强势，所以沃顿爵士才会这样建议他。需要记住的是，弥尔顿的时代与我们的时代并没有本质不同。每个时代都有自己的忌讳，如果你触犯它们，就算没有坐牢，至少也会为自己惹来麻烦，干扰了正常生活。</p>
 <p>我承认，“守口如瓶”看上去是一种怯儒的行为。每当我读到山达基教会（Scientology）的信徒对批评者骚扰不断^，或者抗议以色列侵犯人权的人士被贴上“反犹太人”的标签^^，或者研究人员受到DMCA^^^诉讼威胁^^^^，我内心就有一个声音在高喊：“好吧，你们这些混蛋，让我们来说清楚。”可是问题在于，“不能说的话”太多了，如果口无遮栏，你就没时间做正事了。为了与他人论战，你不得不变成一个语言学家，比如诺姆·乔姆斯基^^^^^。</p>
-<p>^「Richard Behar, &quot;The Thriving Cult of Greed and Power&quot;, Time, 1991年5月6日。」</p>
-<p>^^「Patrick Healy, &quot;Summers hits 'anti-Semitic' actions&quot;, Boston Globe, 2002年9月20日。」</p>
+<p>^「Richard Behar, "The Thriving Cult of Greed and Power", Time, 1991年5月6日。」</p>
+<p>^^「Patrick Healy, "Summers hits 'anti-Semitic' actions", Boston Globe, 2002年9月20日。」</p>
 <p>^^^「DMCA指美国的《数字千禧年版权法》（Digital MillenniumCopyrightAct），该法律主要保护版权作品的互联网传播权。DMCA规定，如果某个网站侵犯了你的版权，你可以向网站所有者或者主机服务商发出通知，要求撤下侵权内容，这个通知就叫做“DMCA通知”。如果对方没有及时采取行动，你就可以把它告上法庭。——译者注」</p>
-<p>^^^^「&quot;Tinkerers champion&quot;, The Economist, 2002年6月20日。」</p>
+<p>^^^^「"Tinkerers champion", The Economist, 2002年6月20日。」</p>
 <p>^^^^^「我这里不是指你一定要持有诺姆·乔姆斯基的观点，而是指你不得不变成一个专业的辩论者（controversialist）。如果说了“不能说的话”，你就同时得罪了保守派和自由派，两派都会与你辩论。好比回到维多利亚女王时代的英国，你同时得罪了辉格党和托利党，那么你的一张嘴怎么能是两大党派的对手呢？（编者注：诺姆·乔姆斯基是著名的语言学家，麻省理工学院的语言学和哲学教授。）」</p>
 <p>“守口如瓶”的真正缺点在于，你从此无法享受讨论带来的好处了。讨论一个观点会产生更多的观点，不讨论就什么观点也没有。所以，如果可能的话，你最好找一些信得过的知己，只与他们畅所欲言、无所不谈。这样不仅可以获得新观点，还可以用来选择朋友。能够一起谈论“异端邪说”并且不会因此气急败坏的人，就是你最应该认识的朋友。</p>
 <p>……</p>
 <p>你的策略，简单说，就是不赞同这个时代的任何一种歇斯底里，但是又不明确告诉别人到底不赞同哪一种歇斯底里。狂热分子试图引诱你说出来真心话，但是你可以不回答。如杲他们不放手，一定要你回答“到底是赞成还是反对我们”，你不妨以不变应万变：“我既不反对也不赞成。”</p>
 <p>不过，更好的回答是“我还没想好”。哈佛大学校长拉里·撒墨尔斯（Larry Summers）被逼表态时，就是这样说的^。他后来解释说：“别想在我身上做石蕊试验^^。”人们喜欢讨论的许多问题实际上都是很复杂的，马上说出你的想法对你并没有什么好处。</p>
-<p>^「James Traub, &quot;HarvardRadical&quot;, New York Times Magazine, 2003年8月24日。」</p>
+<p>^「James Traub, "HarvardRadical", New York Times Magazine, 2003年8月24日。」</p>
 <p>^^「石蕊是一种化学液体，遇到酸性物质时变红，遇到碱性物质时变蓝。所以，石蕊试验通常用来判断某种物质的酸碱性。——译者注」</p>
 <p>假设社会上充斥着反对“黄色分子”的人，他们只要看谁不顺眼，就大肆攻击。你看不下去，准备出手反击。这时，有几种方法可以使你免于被贴上“黄色分子”的标签。你可以参考战争史上的局部战争案例，避免正面对抗敌人的大部队，只打一些小规模的局部战争。比如，从远处用弓箭骚扰他们就是很好的方法。</p>
 <p>具体来说，一种方法就是逐步把辩论提升到一个抽象的层次。假定总的来说，你反对言论审查制度。公开质疑的时候，你一定要小心，不要提到具体的被审査的电影或者书籍。否则，对手就会一把抓住那部电影或那本书籍，声称你支持的其实不是言论自由，而是那些被审查的内容。你不要直接攻击某个标签，而要攻击它的“元标签”（meta-label）。所谓“元标签”，就是对某个标签的抽象描述。如果人们开始讨论元标签，那么原来的标签反而不会受到注意了。举例来说，“政治正确”（political correctness）就是一个“元标签”，是许多特定现象的总称。这个词现在被广泛使用，其实这恰恰意味着“政治正确”的时代正在开始消亡，因为它使得你可以从总体上攻击这个现象，而不会受到指控，不会被说成支持某一种特定的“政治不正确”现象。</p>
